tester/tests/compile-fail/return-in-expr-ctx.srv

fn other(s: String) -> String
    s
end

fn xyz(s: String) -> String
    other(return s)
end
